--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,8 +2,81 @@
 <html>
   <head>
     <title>MP optimizer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Gérard Lichtert" />
+    <meta name="keywords" content="Max particle, MP, Pokémon Go" />
+    <meta name="decription" content="Sample description" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static',
+            filename='css/index.css') }}"
+    />
+    <link
+      rel="icon"
+      href="{{ url_for('static',
+            filename='images/favicon.ico') }}"
+      type="image/x-icon"
+    />
   </head>
   <body>
-    <div>Hello world</div>
+    <header>Insert header stuff</header>
+    <main>
+      <form method="POST" action="">
+        <div class="input-container">
+          <label for="initial-mp-0">Initial MP</label>
+          <input
+            name="initial-mp-0"
+            id="initial-mp-0"
+            type="number"
+            value="{{ request.form.get('initial-mp-0', defaults['initial-mp-0']) }}"
+          />
+        </div>
+        <div class="input-container">
+          <label for="collection-limit-0">Collection limit</label>
+          <input
+            name="collection-limit-0"
+            type="number"
+            value="{{ request.form.get('collection-limit-0',
+                        defaults['collection-limit-0']) }}"
+            required
+          />
+        </div>
+        <div class="input-container">
+          <label for="capacity-limit-0">Capacity limit</label>
+          <input
+            name="capacity-limit-0"
+            type="number"
+            value="{{ request.form.get('capacity-limit-0',
+                        defaults['capacity-limit-0']) }}"
+            required
+          />
+        </div>
+        <div class="input-container">
+          <label>Priority</label>
+          <select required>
+            <option>Particle collection</option>
+            <option>Max battles</option>
+            <option>Max battles & particle collection</option>
+          </select>
+        </div>
+        <div class="input-container">
+          <label for="exploration-mp-0">Exploration mp</label>
+          <input
+            name="exploration-mp-0"
+            type="number"
+            value="{{ request.form.get('exploration-mp-0',
+                        defaults['exploration-mp-0']) }}"
+            required
+          />
+        </div>
+        <div class="submit-container">
+          <button type="submit">Calculate</button>
+        </div>
+      </form>
+      {% if result %}
+      <div class="result">result: {{ result }}</div>
+      {% endif %}
+    </main>
+    <footer>Insert footer stuff</footer>
   </body>
 </html>
